<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplanyonetici"
    tools:context="app.aygazprojesi.YetkiliSatirActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siparis_bilgisi"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#585858"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siparis_tarihi"
            android:layout_gravity="center_horizontal"
            android:textColor="#6E6E6E"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#DF3A01"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="Tarih"
            android:id="@+id/tvTarih"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#6E6E6E"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/siparis_verilenler"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sipariş"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            android:textColor="#DF3A01"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tvSiparisler"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#6E6E6E"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/adsoyad" />
            <TextView
                android:layout_width="wrap_content"
                android:textColor="#DF3A01"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="Ad Soyad"
                android:id="@+id/tvAdSoyad"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#6E6E6E"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/telefon" />
            <TextView
                android:layout_width="wrap_content"
                android:textColor="#DF3A01"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Tel"
                android:id="@+id/tvTel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#6E6E6E"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/adres" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adres"
            android:inputType="textMultiLine"
            android:textColor="#DF3A01"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/tvAdres"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
